Fixed some grids
The grids were squashed together and remembered the host when
they shouldn't.

--- a/rnms/public/css/rnms.css
+++ b/rnms/public/css/rnms.css
@@ -46,6 +46,11 @@ div.action_buttons a {
    padding: 5px 0px 5px 0px;
 }
 
+.vert-space {
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+
 /* Pagination functions */
 /*
 span.table_controls {
